--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="title" content="Título de la WEB">
     <meta name="description" content="Descripción de la WEB">    
     <!-- <link href="reset.css"  rel="stylesheet"   type="text/css" > -->
-    <link href="miestilo.css"  rel="stylesheet"   type="text/css" >	
+    <link href="./css/estilos.css"  rel="stylesheet"   type="text/css" >	
 
       
   </head>  
